web/cypress/fixtures/prom-role-roleBinding.yaml
kind: Template
apiVersion: template.openshift.io/v1
metadata:
  name: netobserv-prom-rbac
objects:
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: netobserv-prom
    namespace: ${NAMESPACE}
  rules:
    - verbs:
        - create
      apiGroups:
        - metrics.k8s.io
      resources:
        - pods
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: netobserv-prom-test
    namespace: ${NAMESPACE}
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: netobserv-prom
  subjects:
    - kind: User
      apiGroup: rbac.authorization.k8s.io
      name: ${USERNAME}
parameters:
- name: NAMESPACE
  value: "netobserv"
- name: USERNAME
  value: "testuser-0"
