web/cypress/fixtures/test-pod.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: netobserv-test-67615
  labels:
    name: netobserv-test-67615

---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test
  name: test
  namespace: netobserv-test-67615
spec:
  containers:
  - command:
      - sh
      - -c
      - "curl -kIL https://52.200.142.250 --output /tmp/test ;"
    image: quay.io/openshifttest/hello-openshift:1.2.0
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
        privileged: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
    name: utils
    resources: {}
  restartPolicy: Never
status: {}
