web/cypress/fixtures/test-server-client.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-server-56222
  labels:
    name: test-server-56222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: test-server-56222
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: quay.io/openshifttest/nginx-alpine:1.2.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-server-56222
  name: nginx-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-client-56222
  labels:
    name: test-client-56222
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: client
  name: client
  namespace: test-client-56222
spec:
  containers:
    - name: client
      image: quay.io/openshifttest/hello-openshift:1.2.0
      command:
        - sh
        - -c
        - |
          while : ; do
            curl nginx-service.test-server-56222.svc:80/data/100K 2>&1 > /dev/null
            sleep 5
          done
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]
        seccompProfile:
          type: RuntimeDefault
